# carnival-task

./: .dockerignore  .env.example  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Task.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build-docker.yml  deploy.yml  publish.yml  test.yml
carnival/: app.py  exceptions.py
carnival/api/: deps.py  health_check.py  router.py
carnival/api/v1/: compilance.py  schemas.py
carnival/core/: auth.py  config.py  logger.py
carnival/services/: __init__.py  base.py  compilance_service.py  optimization_service.py  route_service.py
resources/: allowed_fuels_OMSTQ_AEJEA.json  optimization_OMSTQ_AEJEA.csv  route_OMSTQ_AEJEA.json
tests/: conftest.py
tests/integration/: test_routes.py
tests/load/: locustfile.py
tests/unit/: conftest.py  test_compilance_service.py  test_optimization_service.py  test_route_service.py
